src/mcode-pilot/components/TreatmentOptionsOutcomesIcons/TreatmentOptionsOutcomesIcons.scss
@import '../../../styles/variables';
@import '../../../styles/mixins/media-queries';

.treatment-options-outcomes-icons {
    display: flex;
    flex-direction: row;
    margin-top: 10px;

    @include respond-to('1024px') { flex-direction: column; }

    &.note {
        font-style: italic;
    }

    .icons-survival-text {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        margin: 5px;
        width: 120px;
        height: 375px;
        font-weight: 100;
    }

    .icons-interaction *,
    .icons-interaction *:before,
    .icons-interaction *:after {
        box-sizing: inherit;
    }

    .icons-interaction {
        box-sizing: border-box;
        margin-right: 20px;
        border-collapse: separate;
        border-spacing: 0;

        td {
            padding: 0 10px;
            font-size: 1.1em;
        }

        &__header {
            margin-bottom: 10px;

            .user-icon,
            .overall-survival {
                text-align: center;
            }
        }

        &__row {
            height: 56px;
            cursor: pointer;

            &:nth-child(odd) {
                background-color: $contrast-gray;
            }

            &:hover:not(.selected-treatment) {
                background-color: lighten($icons-blue, 40%);
            }

            &.selected-treatment {
                background-color: darken($contrast-gray, 5%);
                box-shadow: 0px 10px 8px -5px rgba(153, 153, 153, 1);
            }

            &.displayed-treatment td {
                border-color: $icons-blue;

                &.treatment-name {
                    border-top-left-radius: 5px;
                    border-bottom-left-radius: 5px;
                }

                &.overall-survival {
                    border-top-right-radius: 5px;
                    border-bottom-right-radius: 5px;
                }
            }

            .treatment-name,
            .total-patients,
            .overall-survival {
                border-top: 2px solid transparent;
                border-bottom: 2px solid transparent;
            }

            .treatment-name {
                vertical-align: middle;
                border-left: 2px solid transparent;

                .select-icon {
                    display: inline-block;
                    padding-right: 10px;
                    cursor: pointer;
                }

                .display-name {
                    display: inline-block;
                }
            }

            .total-patients,
            .overall-survival {
                text-align: center;
            }

            .overall-survival {
                border-right: 2px solid transparent;

                .diff-num-selected {
                    font-size: 1.1em;

                    &.positive { color: $icons-green; }
                    &.negative { color: $icons-red; }
                }
            }
        }

        .selected-icon {
            position: absolute;
            top: 6px;
            left: -15px;
        }
    }

    .flex { display: flex; }
    .flex-1 { flex: 1; }
    .flex-2 { flex: 2; }
    .flex-3 { flex: 3; }
    .flex-padding { padding: 0 20px; }
}

